# MISO

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_cpu  Doxyfile_gpu  LICENSE  README.md  index.html  miso_build.sh  miso_clean.sh  miso_run.sh  pyproject.toml  setup.py
core/: CMakeLists.txt  README.md
core/include/: angular_quadrature.hpp  artificial_viscosity_gpu.hpp  boundary_condition_base.hpp  boundary_condition_core.hpp  boundary_condition_core_cpu.hpp  config.hpp  cuda_manager.cuh  custom_boundary_condition.hpp  eos.hpp  grid_gpu.cuh  mhd_cpu.hpp  mhd_gpu.cuh  model.hpp  mpi_manager.hpp  standard_boundary_condition.hpp  time_cpu.hpp  utility.hpp
core/include/miso/: angular_quadrature.hpp  array3d.hpp  array3d_cpu.hpp  array3d_gpu.cuh  array4d.hpp  array4d_cpu.hpp  artificial_viscosity.hpp  artificial_viscosity_core.hpp  artificial_viscosity_cpu.hpp  artificial_viscosity_gpu.cuh  artificial_viscosity_gpu.hpp  boundary_condition.hpp  boundary_condition_base.hpp  boundary_condition_core.hpp  boundary_condition_core_cpu.hpp  boundary_condition_core_gpu.cuh  boundary_condition_cpu.hpp  boundary_condition_gpu.cuh  config.hpp  constants.hpp  context_manager.hpp  cuda_compat.hpp  cuda_manager.cuh  cuda_util.cuh  cuda_utils.cuh  custom_boundary_condition.hpp  env.hpp  eos.hpp  grid.hpp  grid_cpu.hpp  grid_generator.hpp  grid_gpu.cuh  grid_view.hpp  memory_space.hpp  mhd.hpp  mhd_artificial_viscosity.hpp  mhd_artificial_viscosity_core.hpp  mhd_artificial_viscosity_cpu.hpp  mhd_artificial_viscosity_cuda.cuh  mhd_artificial_viscosity_gpu.cuh  (+33 more)
core/shared/: mpiexec_with_env.sh
core/tests/: CMakeLists.txt
core/tests/parallel/: CMakeLists.txt  custom_boundary_condition.cpp  custom_boundary_condition.cu  custom_boundary_condition_impl.hpp  force.hpp  test_custom_boundary_condition_mpi_common.hpp  test_model_mpi.cpp  test_model_mpi.cu  test_model_mpi_common.hpp  test_mpi.cpp
core/tests/serial/: CMakeLists.txt  test_array3d.cpp  test_array3d.cu  test_boundary_condition.cpp  test_boundary_condition.cu  test_boundary_condition_common.hpp  test_grid.cpp  test_grid.cu
core/tests/test_cuda/: CMakeLists.txt  config_x.yaml  config_z.yaml  main.cu
demo/: CMakeLists.txt  demo_build.sh  demo_clean.sh  demo_draw.sh  demo_run.sh
demo/hd1d_shock_tube/: CMakeLists.txt  app_clean.sh  app_run.sh  clean_data.sh  config_x.yaml  config_y.yaml  config_z.yaml  plot_data.py  run_app.sh
demo/hd1d_shock_tube/config/: config_x.yaml  config_y.yaml  config_z.yaml
demo/hd1d_shock_tube/src/: hd1d_boundary_condition.hpp  hd1d_initial_condition.hpp  initial_condition.hpp  main.cpp
demo/hd2d_kelvin_helmholtz/: config.yaml  force.hpp  plot_data.py
demo/hd2d_kelvin_helmholtz/src/: main.cpp
demo/hd2d_rayleigh_taylor/: app_run.sh  config.yaml  plot_data.py
demo/hd2d_rayleigh_taylor/src/: main.cpp
demo/mhd1d_shock_tube/: CMakeLists.txt  app_clean.sh  app_run.sh  config_y.yaml  plot_data.py
demo/mhd1d_shock_tube/config/: config_x.yaml  config_y.yaml  config_z.yaml
demo/mhd1d_shock_tube/src/: main.cpp  main.cu
demo/mhd2d_vortex/: CMakeLists.txt  app_run.sh  config.yaml  plot_data.py
demo/mhd2d_vortex/src/: force.hpp  main.cpp  main.cu
demo/mhd3d_magnetosphere/: CMakeLists.txt  app_clean.sh  app_run.sh  config.yaml  main.cu  plot_data.py
demo/mhd3d_magnetosphere/src/: bc.hpp  common.hpp  custom_boundary_condition_impl.hpp  ic.hpp  main.cpp  sources.hpp  src.hpp  timestep.hpp
demo/rt2d_searchlight/: CMakeLists.txt  app_clean.sh  app_run.sh  config.yaml  plot_data.py
demo/rt2d_searchlight/src/: main.cpp
demo/shared/: app_list.sh  custom_boundary_condition.cpp  custom_boundary_condition.cu
miso/tests/serial/: CMakeLists.txt  sod_solution.hpp  test_array1d.cpp  test_array1d.cu  test_array2d.cpp  test_array2d.cu  test_array3d.cpp  (+13 more)
problems/: CMakeLists.txt
problems/cuda_test/: CMakeLists.txt  config.yaml  main.cu
problems/geomagnetosphere_3d/: config.yaml
problems/hd1d_shock_tube/: main.cpp
problems/hd2d_kelvin_helmholtz/: main.cu
problems/hd_kh_2d/: CMakeLists.txt  config.yaml  custom_boundary_condition.cpp  custom_boundary_condition_impl.hpp  main.cpp  main.cu
problems/hd_rayleigh_taylor_2d/: config.yaml  force.hpp  main.cpp  main.cu
problems/hd_shock_tube_1d/: CMakeLists.txt  config_y.yaml  custom_boundary_condition.cu  force.hpp  main.cpp  main.cu
problems/kelvin_helmholtz/: config.yaml  main.cpp  main.cu
problems/mhd1d_shock_tube/: config_x.yaml  plot_data.py
problems/mhd_geomagnetosphere_3d/: config.yaml  custom_boundary_condition_impl.hpp  force.hpp  initial_condition.hpp  main.cpp  main.cu
problems/mhd_kh_3d/: main.cpp
problems/mhd_shock_tube_1d/: CMakeLists.txt  config_x.yaml  config_z.yaml  custom_boundary_condition_impl.hpp  main.cpp  main.cu
problems/mhd_vortex_2d/: CMakeLists.txt  config.yaml  main.cpp  main.cu
problems/rayleigh_taylor/: custom_boundary_condition_impl.hpp  force.hpp
problems/rt2d_searchlight/: config.yaml
problems/rt_searchlight_2d/: CMakeLists.txt  config.yaml  main.cpp
problems/templates/: read.py
tests/: CMakeLists.txt  config.yaml  custom_boundary_condition_impl.hpp  test_array3d.cpp  test_array3d.cu  test_boundary_condition.cpp  test_boundary_condition.cu  test_boundary_condition_common.hpp  test_custom_boundary_condition_mpi.cu  test_custom_boundary_condition_mpi_common.hpp  test_grid.cpp  test_grid.cu  test_grid_common.hpp  test_model.cpp  test_model.cu  test_model_common.hpp  test_model_mpi.cu  test_model_mpi_common.hpp  test_mpi.cpp
tests/config/: config_mpi_y.yaml
tests/parallel/: test_custom_boundary_condition_mpi.cpp  test_custom_boundary_condition_mpi.cu  test_model_mpi.cpp  test_model_mpi.cu  test_mpi.cpp
tests/serial/: test_grid.cpp
tests/test_cuda/: config_y.yaml
tests/unit/: CMakeLists.txt  test_custom_boundary_condition_mpi.cpp  test_grid.cu
tests/unit_mpi/: CMakeLists.txt  test_model_mpi.cpp  test_model_mpi.cu  test_model_mpi_common.hpp
tests/unit_serial/: CMakeLists.txt  test_boundary_condition.cpp  test_boundary_condition_common.hpp  test_grid.cpp
(+184 files in other folders)
